--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -40,5 +40,8 @@ jobs:
       - name: Tests
         run: npm run test:run
 
+      - name: Type check
+        run: npm run typecheck
+
       - name: Build
         run: npm run build
