--- a/allergy-tracker-ui/package.json
+++ b/allergy-tracker-ui/package.json
@@ -13,7 +13,8 @@
     "format:check": "prettier . --check",
     "test": "vitest",
     "test:run": "vitest run",
-    "check": "npm run lint && npm run format:check"
+    "typecheck": "tsc -b --noEmit",
+    "check": "npm run lint && npm run format:check && npm run typecheck"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
