--- a/allergy-tracker-ui/package.json
+++ b/allergy-tracker-ui/package.json
@@ -13,9 +13,14 @@
     "format:check": "prettier . --check",
     "test": "vitest",
     "test:run": "vitest run",
-    "check": "npm run lint && npm run format:check"
+    "typecheck": "tsc -b --noEmit",
+    "check": "npm run lint && npm run format:check && npm run typecheck"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
