--- a/allergy-tracker-ui/package.json
+++ b/allergy-tracker-ui/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:mock": "cross-env VITE_USE_MOCKS=1 vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -23,6 +24,7 @@
     "@mui/material": "^7.3.4",
     "@mui/x-date-pickers": "^8.14.1",
     "dayjs": "^1.11.18",
+    "msw": "^2.11.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4"
@@ -38,6 +40,7 @@
     "@vitejs/plugin-react": "^5.0.4",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/eslint-plugin": "^1.3.16",
+    "cross-env": "^10.1.0",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import-x": "^4.16.1",
@@ -53,5 +56,10 @@
     "vite-plugin-checker": "^0.11.0",
     "vite-plugin-eslint": "^1.8.1",
     "vitest": "^3.2.4"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
