--- a/allergy-tracker-ui/package.json
+++ b/allergy-tracker-ui/package.json
@@ -23,6 +23,7 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "@mui/x-date-pickers": "^8.14.1",
+    "@tanstack/react-query": "^5.90.5",
     "dayjs": "^1.11.18",
     "msw": "^2.11.6",
     "react": "^19.1.1",
