--- a/allergy-tracker-ui/package.json
+++ b/allergy-tracker-ui/package.json
@@ -22,6 +22,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@mui/x-charts": "^8.15.0",
     "@mui/x-date-pickers": "^8.14.1",
     "@tanstack/react-query": "^5.90.5",
     "dayjs": "^1.11.18",
