--- a/allergy-tracker-ui/package.json
+++ b/allergy-tracker-ui/package.json
@@ -22,8 +22,11 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "@mui/x-charts": "^8.15.0",
+    "@mui/x-charts-pro": "^8.15.0",
     "@mui/x-date-pickers": "^8.14.1",
     "@tanstack/react-query": "^5.90.5",
+    "d3-scale-chromatic": "^3.1.0",
     "dayjs": "^1.11.18",
     "msw": "^2.11.6",
     "react": "^19.1.1",
@@ -35,6 +38,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/d3-scale-chromatic": "^3.1.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
