--- a/allergy-tracker-ui/package.json
+++ b/allergy-tracker-ui/package.json
@@ -26,6 +26,7 @@
     "@mui/x-charts-pro": "^8.15.0",
     "@mui/x-date-pickers": "^8.14.1",
     "@tanstack/react-query": "^5.90.5",
+    "axios": "^1.13.2",
     "d3-scale-chromatic": "^3.1.0",
     "dayjs": "^1.11.18",
     "msw": "^2.11.6",
