--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: allergy-tracker-service
+    name: allergy-tracker
   datasource:
     url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/allergytracker}
     username: ${SPRING_DATASOURCE_USERNAME:postgres}
