--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
 SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/your_database_name
 SPRING_DATASOURCE_USERNAME=your_local_username
 SPRING_DATASOURCE_PASSWORD=your_local_password
+
+# JWT Configuration
+# Generate a strong random secret (at least 256 bits / 32 characters)
+# Example: openssl rand -base64 32
+JWT_SECRET=your-jwt-secret-key
+
+# Password Security
+# Example: openssl rand -base64 32
+PASSWORD_PEPPER=your-password-pepper-key
