--- a/allergy-tracker-ui/package.json
+++ b/allergy-tracker-ui/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.13.2",
     "d3-scale-chromatic": "^3.1.0",
     "dayjs": "^1.11.18",
+    "jwt-decode": "^4.0.0",
     "msw": "^2.11.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
